enroll course bones

--- a/src/views/templates/courseEnroll.ejs
+++ b/src/views/templates/courseEnroll.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Course Overview</title>
+    <title>Enroll Course</title>
 </head>
 <body>
     <button>
@@ -11,24 +11,25 @@
     </button>
     <hr>
     <div class='course-overview'>
-        <h1>Course Overview</h1>
+        <h1>Enroll course</h1>
         <hr>
         <br>
         <img src="<%= course.image %>" alt="<%= course.title %> Image">
         <br>
         <h2><%= course.title %></h2>
-        <p><%= course.overview %></p>
         <div>
             <p>Instructor: <%= course.instructor %></p>
             <p>Duration: <%= course.duration %></p>
             <p>Price: $<%= course.price %></p>
         </div>
         <br>
+        <p><%= course.overview %></p>
+        <br>
     </div>
     <hr>
-    <div class='course-enrollment'>
+    <div class='payment-options'>
         <button>
-            <a href="/course/<%= course.id %>/enroll">Enroll</a>
+            <a href="#">Pay</a>
         </button>
     </div>
 </body>
