--- a/src/views/templates/login.ejs
+++ b/src/views/templates/login.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>login</title>
+    <link rel="stylesheet" href="css/form.css">
 </head>
 <body>
     <button>
@@ -12,7 +13,7 @@
     <hr>
     <h1>Login</h1>
 
-    <form action="/login" method="post">
+    <form action="/login" method="post"  class="vertical-form">
         <input type="text" name="username" placeholder="Username">
         <input type="password" name="password" placeholder="Password">
         <input type="submit" value="Login">
