--- a/src/views/templates/signup.ejs
+++ b/src/views/templates/signup.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>signup</title>
+    <link rel="stylesheet" href="css/form.css">
 </head>
 <body>
     <button>
@@ -12,7 +13,7 @@
     <hr>
     <h1>Signup</h1>
 
-    <form action="/signup" method="post">
+    <form action="/signup" method="post"  class="vertical-form">
         <input type="text" name="username" placeholder="Username">
         <input type="text" name="name" placeholder="Firstname">
         <input type="text" name="email" placeholder="Email">
