--- a/src/public/index.ejs
+++ b/src/public/index.ejs
@@ -4,13 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel="stylesheet" href="css/alert.css">
 </head>
 <body>
+    <% if (message) { %>
+        <p class="alert"><%= message %></p>
+    <% } %>
     <div>
         <button><a href="/login">login</a></button>
         <button><a href="/signup">signup</a></button>
     </div>
-    <p>Hello</p>
+    <p>Hello, <%= user.name %></p>
     <h1>Home</h1>
     <hr>
     
