--- a/src/public/css/alert.css
+++ b/src/public/css/alert.css
@@ -1,8 +1,42 @@
 .alert {
-    background-color: #f8d7da;
-    color: #721c24;
+    background-color: #74ce83;
+    color: #ffff;
     padding: 10px;
-    border: 1px solid #f5c6cb;
+    border: 1px solid #74ce83;
     border-radius: 5px;
     margin-bottom: 15px;
+    animation: fadeInOut 5s forwards;
+}
+
+@keyframes fadeInOut {
+    0% {
+        opacity: 0;
+        height: 0;
+        padding: 0;
+        border: none;
+        margin: 0;
+    }
+    5% {
+        opacity: 1;
+        height: auto;
+        padding: 10px;
+        border: 1px solid #74ce83;
+        border-radius: 5px;
+        margin-bottom: 15px;
+    }
+    95% {
+        opacity: 1;
+        height: auto;
+        padding: 10px;
+        border: 1px solid #74ce83;
+        border-radius: 5px;
+        margin-bottom: 15px;
+    }
+    100% {
+        opacity: 0;
+        height: 0;
+        padding: 0;
+        border: none;
+        margin: 0;
+    }
 }
