--- a/src/views/templates/navbar.ejs
+++ b/src/views/templates/navbar.ejs
@@ -3,8 +3,13 @@
         <ul>
             <li><a href="/">Home</a></li>
             <li><a href="/courses">Courses</a></li>
-            <li class="user-info"><%= user ? `Welcome, ${user.name}!` : 'Guest' %></li>
-            <li><a href="/logout">Logout</a></li>
+            | <% if (user) { %>
+                <li class="user-info">Welcome, <%= user.name %>!</li>
+                <li><a href="/logout">Logout</a></li>
+            <% } else { %>
+                <li><a href="/login">Login</a></li>
+                <li><a href="/signup">Signup</a></li>
+            <% } %>
         </ul>
     </div>
 </nav>
