redirect to list on creation

--- a/src/views/templates/navbar.ejs
+++ b/src/views/templates/navbar.ejs
@@ -2,6 +2,7 @@
     <div class="nav-container">
         <ul>
             <li><a href="/">Home</a></li>
+            <li><a href="/course/create">Create Course</a></li>
             <li><a href="/courses">Courses</a></li>
             | <% if (user) { %>
                 <li class="user-info">Welcome, <%= user.name %>!</li>
