--- a/src/views/templates/courseOverview.ejs
+++ b/src/views/templates/courseOverview.ejs
@@ -22,7 +22,9 @@
                     <h1>Course Overview</h1>
                     <hr>
                     <br>
-                    <img src="<%= course.image %>" alt="<%= course.title %> Image">
+                    
+                    <img src="<%= course.thumbnail %>" alt="<%= course.title %> Image">
+
                     <br>
                     <h2>
                         <%= course.title %>
