--- a/src/views/templates/courseOverview.ejs
+++ b/src/views/templates/courseOverview.ejs
@@ -45,7 +45,7 @@
                 <hr>
                 <div class='course-enrollment'>
                     <button>
-                        <a href="/course/<%= course.id %>/enroll">Enroll</a>
+                        <a href="/course/<%= course.slug %>/enroll">Enroll</a>
                     </button>
                 </div>
             </div>
