--- a/src/views/templates/courseEnroll.ejs
+++ b/src/views/templates/courseEnroll.ejs
@@ -52,9 +52,12 @@
     <hr>
     <div class='payment-options'>
         <h2>Total Amount: $<%= course.price %></h2>
-        <button>
-            <a href="#">Pay Now</a>
-        </button>
+        <!-- The form to trigger the payment -->
+        <form action="/create-order" method="POST">
+            <!-- Hidden input to pass the course slug to the server -->
+            <input type="hidden" name="courseSlug" value="<%= course.slug %>">
+            <button type="submit">Pay Now</button>
+        </form>
     </div>
 </body>
 </html>
