--- a/src/views/templates/navbar.ejs
+++ b/src/views/templates/navbar.ejs
@@ -4,6 +4,7 @@
             <li><a href="/">Home</a></li>
             <li><a href="/course/create">Create Course</a></li>
             <li><a href="/courses">Courses</a></li>
+            <li><a href="/courses-owned">My courses</a></li>
             | <% if (user) { %>
                 <li class="user-info">Welcome, <%= user.name %>!</li>
                 <li><a href="/logout">Logout</a></li>
