--- a/src/views/templates/courseOverview.ejs
+++ b/src/views/templates/courseOverview.ejs
@@ -21,11 +21,10 @@
                 <div class='course-overview'>
                     <h1>Course Overview</h1>
                     <hr>
-                    <br>
                     
                     <img src="<%= course.thumbnail %>" alt="<%= course.title %> Image">
 
-                    <br>
+                    <p>course_id: <%= course._id %> user_id: <%= user._id %></p>
                     <h2>
                         <%= course.title %>
                     </h2>
