--- a/src/views/templates/courseDetail.ejs
+++ b/src/views/templates/courseDetail.ejs
@@ -18,22 +18,7 @@
             <a href="/courses">Go back to All Courses</a>
         </button>
         <div class='course-detail'>
-            <img src="<%= course.thumbnail %>" alt="<%= course.title %> Image">
-
-            <h1><%= course.title %></h1>
-                
-            <p>
-                <%= course.overview %>
-            </p>
-            <div>
-                <p>Instructor: <%= course.instructor %>
-                </p>
-                    <p>Description: <%= course.description %>
-                </p>
-                <p>Duration: <%= course.length %>
-                </p>
-            </div>
-            <br>
+            <!--here we display enrolledcourse info-->
         </div>
 
     </div>
