--- a/src/views/templates/courseDetail.ejs
+++ b/src/views/templates/courseDetail.ejs
@@ -18,7 +18,7 @@
             <a href="/courses">Go back to All Courses</a>
         </button>
         <div class='course-detail'>
-            <!--here we display enrolledcourse info-->
+            <!--here we display enrolledcourses from the user-->
         </div>
 
     </div>
