--- a/src/views/templates/courseEnroll.ejs
+++ b/src/views/templates/courseEnroll.ejs
@@ -30,6 +30,7 @@
     </div>
     <hr>
     <div class='payment-options'>
+        <!--course enroll-->
         <h2>Total Amount: $<%= course.price %></h2>
         <!-- The form to trigger the payment -->
         <form action="/create-order" method="POST">
