--- a/src/views/templates/login.ejs
+++ b/src/views/templates/login.ejs
@@ -13,7 +13,7 @@
     <hr>
     <h1>Login</h1>
 
-    <form action="/login" method="post"  class="vertical-form">
+    <form action="/api/login" method="post"  class="vertical-form">
         <input type="text" name="username" placeholder="Username">
         <input type="password" name="password" placeholder="Password">
         <input type="submit" value="Login">
