--- a/src/views/templates/signup.ejs
+++ b/src/views/templates/signup.ejs
@@ -13,13 +13,19 @@
     <hr>
     <h1>Signup</h1>
 
-    <form action="/signup" method="post"  class="vertical-form">
-        <input type="text" name="username" placeholder="Username">
-        <input type="text" name="name" placeholder="Firstname">
-        <input type="text" name="email" placeholder="Email">
-        <input type="password" name="password" placeholder="Password">
+    <form action="/api/signup" method="post" class="vertical-form">
+        <label for="username">Username:</label>
+        <input type="text" id="username" name="username" placeholder="Username" required>
+        <label for="name">Firstname:</label>
+        <input type="text" id="name" name="name" placeholder="Firstname" required>
+        <label for="email">Email:</label>
+        <input type="text" id="email" name="email" placeholder="Email" required>
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password" placeholder="Password" required>
+    
         <input type="submit" value="Signup">
     </form>
+    
     <p><a href="/login">Already have an account.</a></p>
 </body>
 </html>
