--- a/src/views/templates/courseOverview.ejs
+++ b/src/views/templates/courseOverview.ejs
@@ -28,12 +28,12 @@
                         <%= course.title %>
                     </h2>
                     <p>
-                        <%= course.overview %>
+                        <%= course.description %>
                     </p>
                     <div>
                         <p>Instructor: <%= course.instructor %>
                         </p>
-                        <p>Duration: <%= course.duration %>
+                        <p>Duration: <%= course.length %>
                         </p>
                         <p>Price: $<%= course.price %>
                         </p>
