--- a/src/views/templates/navbar.ejs
+++ b/src/views/templates/navbar.ejs
@@ -2,11 +2,11 @@
     <div class="nav-container">
         <ul>
             <li><a href="/">Home</a></li>
-            <li><a href="/course/create">Create Course</a></li>
-            <li><a href="/courses">Courses</a></li>
+            <li><a href="/api/course/create">Create Course</a></li>
+            <li><a href="/api/courses">Courses</a></li>
             | <% if (user && user.name) { %>
                 <li class="user-info">Welcome, <%= user.name %>!</li>
-                <li><a href="/courses-owned">My courses |</a></li>
+                <li><a href="/api/courses-owned">My courses |</a></li>
                 <li><a href="/api/logout">Logout</a></li>
             <% } else { %>
                 <li><a href="/api/login">Login</a></li>
