--- a/src/views/templates/courseEnroll.ejs
+++ b/src/views/templates/courseEnroll.ejs
@@ -21,11 +21,11 @@
         <h2><%= course.title %></h2>
         <div>
             <p>Instructor: <%= course.instructor %></p>
-            <p>Duration: <%= course.duration %></p>
+            <p>Duration: <%= course.length %></p>
             <p>Price: $<%= course.price %></p>
         </div>
         <br>
-        <p><%= course.overview %></p>
+        <p><%= course.description %></p>
         <br>
     </div>
     <hr>
@@ -33,7 +33,7 @@
         <!--course enroll-->
         <h2>Total Amount: $<%= course.price %></h2>
         <!-- The form to trigger the payment -->
-        <form action="/create-order" method="POST">
+        <form action="/api/create-order" method="POST">
             <!-- Hidden input to pass the course slug to the server -->
             <input type="hidden" name="courseSlug" value="<%= course.slug %>">
             <button type="submit">Pay Now</button>
