logs debugging captureOrder

--- a/src/views/templates/courseCreate.ejs
+++ b/src/views/templates/courseCreate.ejs
@@ -9,7 +9,7 @@
 
 <body>
     <h1>Create New Course</h1>
-    <form id="courseForm" action="/course/create" method="POST" enctype="multipart/form-data">
+    <form id="courseForm" action="/api/course/create" method="POST" enctype="multipart/form-data">
         <!-- Form action should match the route for creating a course -->
         <label for="title">Name:</label><br>
         <input type="text" id="title" name="title"><br><br>
