--- a/src/views/templates/courseDetail.ejs
+++ b/src/views/templates/courseDetail.ejs
@@ -15,7 +15,7 @@
         <%- include ('navbar') -%>
         <%- include ('alert') -%>
         <button>
-            <a href="/courses">Go back to All Courses</a>
+            <a href="/api/courses">Go back to All Courses</a>
         </button>
         <div class='course-detail'>
             <!--here we display enrolledcourses from the user-->
