--- a/src/views/templates/courseCreate.ejs
+++ b/src/views/templates/courseCreate.ejs
@@ -21,8 +21,11 @@
         <label for="description">Description:</label><br>
         <textarea id="description" name="description"></textarea><br><br>
 
-        <label for="price">Price:</label><br>
-        <input type="number" id="price" name="price"><br><br>
+        <label for="price">ARS Price:</label><br>
+        <input type="number" id="ars_price" name="ars_price"><br><br>
+
+        <label for="price">USD Price:</label><br>
+        <input type="number" id="usd_price" name="usd_price"><br><br>
 
         <label for="discount">Discount:</label><br>
         <input type="number" id="discount" name="discount"><br><br>
