--- a/src/views/templates/courseOverview.ejs
+++ b/src/views/templates/courseOverview.ejs
@@ -35,7 +35,7 @@
                         </p>
                         <p>Duration: <%= course.length %>
                         </p>
-                        <p>Price: $<%= course.price %>
+                        <p>Price: USD<%= course.usd_price %> | ARS<%= course.ars_price %></p>
                         </p>
                     </div>
                     <br>
