--- a/src/views/templates/courses.ejs
+++ b/src/views/templates/courses.ejs
@@ -23,7 +23,7 @@
                     <a href="/api/course/<%= course.slug %>" target="_blank" >
                         <img src="<%= course.thumbnail %>" alt="<%= course.title %> Image">
                         <h2><%= course.title %></h2>
-                        <p>Price: $<%= course.price %></p>
+                        <p>USD <%= course.usd_price %> | ARS <%= course.ars_price %></p>
                         <p><%= course.description %></p>
                     </a>
                 </li>
