--- a/src/views/templates/courses.ejs
+++ b/src/views/templates/courses.ejs
@@ -26,6 +26,10 @@
                             <p>USD <%= course.usd_price %> | ARS <%= course.ars_price %></p>
                             <p><%= course.description %></p>
                         </a>
+                        <div>
+                            <p><a href="/api/course/<%= course.slug %>/update">Edit</a></p>
+                            <p><a href="#">Delete</a></p>
+                        </div>
                     </li>
                 <% }); %>
             </ul>
