course update with id

--- a/src/views/templates/courseUpdate.ejs
+++ b/src/views/templates/courseUpdate.ejs
@@ -3,14 +3,41 @@
 
 <head>
     <title>Edit Course</title>
+    <link rel="stylesheet" href="/css/courseUpdate.css">
+    <link rel="stylesheet" href="/css/alert.css">
+    <link rel="stylesheet" href="/css/navbar.css">
 </head>
 
 <body>
+    <%- include ('navbar') -%>
+    <%- include ('alert') -%>
+
     <h1>Edit Course</h1>
-    <form id="courseEditForm" action="/api/course/<%= course.slug %>/update" method="PATCH" enctype="multipart/form-data">
+    <form id="courseEditForm" action="/api/course/<%= course.id %>/update" method="PATCH" enctype="multipart/form-data">
         <label for="title">Title:</label><br>
         <input type="text" id="title" name="title" value="<%= course.title %>"><br><br>
-        <!--.....-->
+
+        <label for="description">Description:</label><br>
+        <textarea id="description" name="description"><%= course.description %></textarea><br><br>
+
+        <label for="ars_price">ARS Price:</label><br>
+        <input type="number" id="ars_price" name="ars_price" value="<%= course.ars_price %>"><br><br>
+
+        <label for="usd_price">USD Price:</label><br>
+        <input type="number" id="usd_price" name="usd_price" value="<%= course.usd_price %>"><br><br>
+
+        <label for="discount">Discount:</label><br>
+        <input type="number" id="discount" name="discount" value="<%= course.discount %>"><br><br>
+
+        <label for="active">Active:</label><br>
+        <input type="checkbox" id="active" name="active" value="true" <% if (course.active) { %> checked <% } %>><br><br>
+
+        <label for="thumbnail">Thumbnail:</label><br>
+        <input type="file" id="thumbnail" name="thumbnail"><br><br>
+
+        <label for="length">Length:</label><br>
+        <input type="number" id="length" name="length" value="<%= course.length %>"><br><br>
+
         <button type="submit">Update Course</button>
     </form>
 </body>
