--- a/src/views/templates/courses.ejs
+++ b/src/views/templates/courses.ejs
@@ -27,7 +27,7 @@
                             <p><%= course.description %></p>
                         </a>
                         <div>
-                            <p><a href="/api/course/<%= course.slug %>/update">Edit</a></p>
+                            <p><a href="/api/course/<%= course.id %>/update">Edit</a></p>
                             <p><a href="#">Delete</a></p>
                         </div>
                     </li>
