--- a/src/views/templates/coursesOwned.ejs
+++ b/src/views/templates/coursesOwned.ejs
@@ -21,7 +21,13 @@
             <% if (courses.length > 0) { %>
               <ul>
                 <% courses.forEach(course => { %>
-                  <li><%= course.title %></li> <!-- Display course details as needed -->
+                  <li>
+                    <a href="/api/course/<%= course.id %>/modules" target="_blank" >
+                        <img src="<%= course.thumbnail %>" alt="<%= course.title %> Image">
+                        <h2><%= course.title %></h2>
+                        <p><%= course.description %></p>
+                    </a>
+                </li>
                 <% }) %>
               </ul>
             <% } else { %>
