--- a/src/views/templates/courseEnroll.ejs
+++ b/src/views/templates/courseEnroll.ejs
@@ -33,13 +33,14 @@
         <!--course enroll-->
         <h2>Total Amount: $<%= course.price %></h2>
         <!-- The form to trigger the payment -->
-        <form action="/api/create-order-paypal?courseId=${course.id}" method="POST">
+        <form action="/api/create-order-paypal?courseId=<%= course.id %>" method="POST">
             <!-- Hidden input to pass the course slug to the server -->
             <input type="hidden" name="courseId" value="<%= course.id %>">
+            <input type="hidden" name="userId" value="<%= userId %>">
             <button type="submit">Continue with Paypal</button>
         </form>
         <br>
-        <form action="/api/create-order-mp?courseId=${course.id}" method="POST">
+        <form action="/api/create-order-mp?courseId=<%= course.id %>" method="POST">
             <!-- Hidden input to pass the course slug to the server -->
             <input type="hidden" name="courseId" value="<%= course.id %>">
             <input type="hidden" name="userId" value="<%= userId %>">
