--- a/src/views/templates/courseCreate.ejs
+++ b/src/views/templates/courseCreate.ejs
@@ -12,6 +12,7 @@
     <h1>Create New Course</h1>
     <form id="courseForm" action="/api/course/create" method="POST" enctype="multipart/form-data">
         <!-- Form action should match the route for creating a course -->
+        <h3>Course description</h3>
         <label for="title">Name:</label><br>
         <input type="text" id="title" name="title"><br><br>
 
@@ -22,30 +23,40 @@
         <label for="description">Description:</label><br>
         <textarea id="description" name="description"></textarea><br><br>
 
+        <label for="thumbnail">Thumbnail:</label><br>
+        <input type="file" id="thumbnail" name="thumbnail"><br><br>
+
+        <h3>Price settings</h3>
         <label for="price">ARS Price:</label><br>
         <input type="number" id="ars_price" name="ars_price"><br><br>
 
         <label for="price">USD Price:</label><br>
         <input type="number" id="usd_price" name="usd_price"><br><br>
 
+        <h3>Aditional configs</h3>
         <label for="discount">Discount:</label><br>
-        <input type="number" id="discount" name="discount"><br><br>
+        % <input type="number" id="discount" name="discount"><br><br>
 
-        <label for="active">Active:</label><br>
-        <input type="checkbox" id="active" name="active" value="true"><br><br>
+        <div style="display: flex;">
+            <div>
+                <label for="active">Active:</label><br>
+                <input type="checkbox" id="active" name="active" value="true"><br><br>
+            </div>
 
-        <label for="thumbnail">Thumbnail:</label><br>
-        <input type="file" id="thumbnail" name="thumbnail"><br><br>
-
-        <label for="length">Length:</label><br>
-        <input type="number" id="length" name="length"><br><br>
+            <div style="margin-left: 40px;">
+                <label for="length">Length:</label><br>
+                <input type="number" id="length" name="length" style="width: 80px;"><br><br>
+            </div>
+        </div>
 
         <button type="submit">Create Course</button>
 
-         <!-- Display error message -->
-         <% if (typeof errorMessage !== 'undefined') { %>
-            <p style="color: red;"><%= errorMessage %></p>
-          <% } %>
+        <!-- Display error message -->
+        <% if (typeof errorMessage !=='undefined' ) { %>
+            <p style="color: red;">
+                <%= errorMessage %>
+            </p>
+            <% } %>
     </form>
 </body>
 
